Fixed #36230 -- Improved color contrast for blockquote in admin.
Thanks Thibaud Colas for the review.

--- a/django/contrib/admin/static/admin/css/base.css
+++ b/django/contrib/admin/static/admin/css/base.css
@@ -242,10 +242,10 @@ details summary {
 
 blockquote {
     font-size: 0.6875rem;
-    color: #777;
+    color: var(--body-quiet-color);
     margin-left: 2px;
     padding-left: 10px;
-    border-left: 5px solid #ddd;
+    border-left: 5px solid currentColor;
 }
 
 code, pre {
